--- a/sbmeteorapp.css
+++ b/sbmeteorapp.css
@@ -79,27 +79,27 @@ p a:hover, p a:active,
 }
 
 @media (max-width:767px) { 
-.navbar-top .navbar-right {
-    float: right;
-    padding-right: 15px;
-}
-.navbar-top .nav.navbar-nav.navbar-right li {
-    float: right;
-}
-.navbar-top .nav.navbar-nav.navbar-right li > a {
-    padding:5px 8px;
-}
-.navbar-top .navbar-toggle {
-    float: left
-}
-.navbar-top .navbar-header {
-    float: left;
-    width: auto!important;
-}
-.navbar-top .navbar-collapse {
-    clear: both;
-    float: none;
-}
+  .navbar-top .navbar-right {
+      float: right;
+      padding-right: 15px;
+  }
+  .navbar-top .nav.navbar-nav.navbar-right li {
+      float: right;
+  }
+  .navbar-top .nav.navbar-nav.navbar-right li > a {
+      padding:5px 8px;
+  }
+  .navbar-top .navbar-toggle {
+      float: left
+  }
+  .navbar-top .navbar-header {
+      float: left;
+      width: auto!important;
+  }
+  .navbar-top .navbar-collapse {
+      clear: both;
+      float: none;
+  }
 }
 
 /* Sign in / Join */
@@ -126,6 +126,14 @@ p a:hover, p a:active,
   padding-bottom: 4em;
 }
 
+/* Lesson buttons */
+.btn-lesson {
+  white-space: normal;
+  max-width: 90%;
+  text-align: left;
+  /*background-color: #FFFCF6;*/
+}
+
 /* Play word button */
 
 ul { /* also works with ol */
@@ -133,14 +141,26 @@ ul { /* also works with ol */
     text-align: center; /* this will center the list items */
 }
 
+.ul-word {
+  /*min-height: 18.25em;*/
+}
+
+.li-word {
+  width: 45%;
+}
+
+.glyphicon-play-circle {
+  color: #7F7FB3;
+}
+
 .btn-word {
   background-color: #FFFCF6;
   border: solid 2px black;
   /*border-radius: 0;  sharp corners */
-  width: 11em;
-  height: 5.5em;
+  white-space: normal; /* handling text overflow */
+  width: 100%;
+  height: 5em;
   margin-bottom: 1em;
-
   /* add shadow */
   -webkit-box-shadow: 0.2em 0.3em 0 rgba(4, 4, 4, 0.3);
   -moz-box-shadow:    0.2em 0.3em 0 rgba(4, 4, 4, 0.3);
@@ -154,20 +174,31 @@ ul { /* also works with ol */
   margin-right: -0.2em;
 }
 
-.btn-word:focus, .btn-word:active:focus {
+.btn:focus, .btn:active:focus {
   outline: none;
 }
 
-/* custom icons */
-
-[class^="icon-custom-"],
-[class*=" icon-custom-"] {
-    background-image: url("img/icons.png");
-    background-repeat: no-repeat;
-    display: inline-block;
+.btn-word-group {
+  border-radius: 24px;
 }
 
-.icon-custom-logo { background-position : -550px -690px; width : 120px; height : 120px;  }
-.icon-custom-intheoffice { background-position: -395px -60px; width: 24px; height: 24px  } 
-.icon-custom-edit { background-position: -765px -201px; width: 24px; height: 29px  } 
-.icon-custom-play-word { background-position: -764px -176px; width: 25px; height: 25px  } 
+.btn-word-group.active {
+  color: #7F7FB3;
+  background-color: #FFFCF6;
+  border: #7F7FB3 solid 2px;
+}
+
+.group-menu {
+  background-image: linear-gradient(to bottom, #FDBA13 100%, #f8f8f8 100%);
+  margin-bottom: 0.5em;
+}
+
+.word-group {
+  padding-top: 1.7em;
+}
+
+.previous-word-group, .next-word-group, .sound-menu {
+  background-color: transparent;
+  border: none;
+  color: #7F7FB3;
+}
