--- a/sbmeteorapp.css
+++ b/sbmeteorapp.css
@@ -62,6 +62,8 @@ p a:hover, p a:active,
 /* Nav Bar */
 .navbar-top {
   background-image: linear-gradient(to bottom, #FDBA13 100%, #f8f8f8 100%);
+  margin-bottom: 0;
+  border-color: transparent;
 }
 .navbar-top .navbar-nav > .open > a,
 .navbar-top .navbar-nav > .active > a {
@@ -78,7 +80,7 @@ p a:hover, p a:active,
 	font-size: 25px;
 }
 
-@media (max-width:767px) { 
+@media (max-width: 767px) { 
   .navbar-top .navbar-right {
       float: right;
       padding-right: 15px;
@@ -108,13 +110,13 @@ p a:hover, p a:active,
 }
 
 /* Footer */
-.navbar-fixed-bottom {
+/*.navbar-fixed-bottom {
   text-align: center;
   margin-top: 1em;
 }
 .navbar-fixed-bottom > .container {
   margin-top: 1em;
-}
+}*/
 
 /* Welcome Page */
 .jumbotron {
@@ -123,7 +125,8 @@ p a:hover, p a:active,
   
 /* Main part of body */
 .main {
-  padding-bottom: 4em;
+  /* padding-bottom: 4em; */ /* pad content from footer */
+  padding-top: 1em;
 }
 
 /* Lesson buttons */
@@ -131,19 +134,28 @@ p a:hover, p a:active,
   white-space: normal;
   max-width: 90%;
   text-align: left;
-  /*background-color: #FFFCF6;*/
+  background-color: #FFFCF6;/* #FDBA13; */
+}
+/*.lesson-title {
+  color: #887BB6;
+}*/
+
+/* Sets list */
+#accordion > .panel > .panel-collapse > .panel-body {
+  padding: 0.5em 0;
 }
 
-/* Play word button */
-
-.ul-word  { /* also works with ol */
-    width: 100%; /* or your desired width */
-    text-align: center; /* this will center the list items */
+/* Play word buttons */
+.ul-word  {               /* also works with ol */
+    width: 100%;          /* or your desired width */
+    text-align: center;   /* this will center the list items */
     /*min-height: 18.25em;*/
+    margin: 0 0;
 }
 
 .li-word {
   width: 45%;
+  margin: 0.5em 0;
 }
 
 .glyphicon-play-circle {
@@ -157,7 +169,7 @@ p a:hover, p a:active,
   white-space: normal; /* handling text overflow */
   width: 100%;
   height: 5em;
-  margin-bottom: 1em;
+  border: 2px black solid;
   /* add shadow */
   -webkit-box-shadow: 0.2em 0.3em 0 rgba(4, 4, 4, 0.3);
   -moz-box-shadow:    0.2em 0.3em 0 rgba(4, 4, 4, 0.3);
@@ -166,11 +178,12 @@ p a:hover, p a:active,
 
 .btn-word:active {
   margin-top: 0.3em;
-  margin-bottom: 0.7em;
+  margin-bottom: -0.3em;
   margin-left: 0.2em;
   margin-right: -0.2em;
 }
 
+/* Word group menu */
 .btn-word-group {
   border-radius: 24px;
 }
@@ -181,31 +194,46 @@ p a:hover, p a:active,
   border: #7F7FB3 solid 2px;
 }
 
-#accordion {
-  min-height: 30em;
-}
-
 /* Sound settings menu */
-
 .play-menu {
   background-image: linear-gradient(to bottom, #FDBA13 100%, #f8f8f8 100%);
-  margin-bottom: 0.5em;
+  width: 100%;
 }
 
-.play-menu > div > .btn {
+@media (max-width: 767px) and (min-height: 600px) {
+  .play-menu > div {
+    width: 100%;
+  }
+}
+
+@media (max-height: 600px) {
+  .play-menu > div {
+    background-image: linear-gradient(to bottom, #FDBA13 100%, #f8f8f8 100%);
+    padding-left: 2.5em;
+    padding-right: 2.5em;
+  }
+  .word-show {
+    padding-bottom: 75px; /* might want to use em units instead */
+  }
+}
+
+.play-menu > div >  div > .btn {
   background-color: transparent;
   border: none;
   color: #7F7FB3;
 }
 
+.word-group {
+  padding-top: 1.7em;
+}
+
+
+/* Quiz play button */
 .btn-play-quiz {
   font-size: 5em;
   background-color: transparent;
   border-color: transparent;
-  border-radius: 100%;
-  padding-bottom: 0;
-  display: inline-block;
-  text-shadow: 0.02em 0.03em 0 black;
+  text-shadow: 0.02em 0.03em 0 rgba(4, 4, 4, 0.3);
 }
 
 .btn-play-quiz:active {
@@ -218,16 +246,7 @@ p a:hover, p a:active,
   margin-right: -0.02em;
 }
 
-.btn-play-quiz > span {
-  text-align: right;
-  vertical-align: middle;
-}
-
-.word-group {
-  padding-top: 1.7em;
-}
-
+/* Buttons */
 .btn:focus, .btn:active:focus {
   outline: none;
 }
-
