--- a/sbmeteorapp.css
+++ b/sbmeteorapp.css
@@ -124,8 +124,6 @@ p a:hover, p a:active,
   padding-top: 1em;
 }
 
-
-
 /* Lesson buttons */
 .btn-lesson {
   white-space: normal;
@@ -136,11 +134,6 @@ p a:hover, p a:active,
 /*.lesson-title {
   color: #887BB6;
 }*/
-
-/* Sets list */
-#accordion > .panel > .panel-collapse > .panel-body {
-  padding: 0.5em 0;
-}
 
 /* Play word buttons */
 .ul-word  {               /* also works with ol */
@@ -267,4 +260,15 @@ p a:hover, p a:active,
 .btn:focus, .btn:active:focus,
 button:focus, button:active:focus {
   outline: none;
+}
+
+.fade {
+    opacity: 0;
+    -webkit-transition: opacity 0.15s linear;
+    -moz-transition: opacity 0.15s linear;
+    -o-transition: opacity 0.15s linear;
+    transition: opacity 0.15s linear;
+}
+.fade.in {
+    opacity: 1;
 }
